<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_now"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:src="@drawable/login_now"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tv_login_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <com.programmer.finalproject.ui.customview.EmailEditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_your_email"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:imeOptions="actionDone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <com.programmer.finalproject.ui.customview.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_your_password"
        android:imeOptions="actionDone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="TextContrastCheck" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/light_blue_alt"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        app:cornerRadius="20dp"
        android:enabled="true"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:indeterminateTint="@color/dark_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/not_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/bt_login"
        android:text="@string/don_t_have"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        tools:ignore="SmallSp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_reg_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/dark_blue"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        tools:ignore="SmallSp,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>