<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_marginTop="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/chapter"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chapter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_10"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_chapter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_strip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/strip"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_chapter_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/pendahuluan"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toEndOf="@id/tv_strip"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/menit"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_10"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_minute"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>